Feature fluent monitoring (#107)
* enable serviceMonitor in fluentbit-gcp

* fix sts add prometheus label

* fix matchLabels

* change sm port

* use correct metrics path

* change prometheus service port

* change sm port

* helm dep update

* mv service:enabled from charts_deps

* add SM to fluent-operated

* add selector labels

* return old port

* fix label enrichment

* helm dep update

* add fluentbit alert

* add alerts

* add fluentbit panels. grafana

* get metrics from pg fluentbit

* increase pg-exporter limits

* fix fluent metric port

* add podmonitor to prometheus libs

* update info

* fix variable name

* helm dep update

* helm dep update

* fix typo

* fix typo

* helm dep update

* fix typo

* reduce alert name

* abstract cloud

* abstract cloud

* delete redis cpu limits in argo

* delete pg cpu limits

* delete pg logical backup cpu limits

---------

Co-authored-by: St.Dmitry <hector@defigang.dev>

--- a/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/values.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-standalone/values.yaml
@@ -82,7 +82,7 @@ fluentbit:
     # runAsUser: 1000
 
   service:
-    enabled: true
+    enabled: false
     name: '{{ include "fluentbit.fullname" . }}'
     type: ClusterIP
     ports:
@@ -90,6 +90,10 @@ fluentbit:
         targetPort: http
         protocol: TCP
         name: http
+      - port: 2020
+        targetPort: 2020
+        protocol: TCP
+        name: metrics
 
   resources: {}
 
@@ -114,13 +118,13 @@ fluentbit:
 
   serviceMonitor:
     enabled: false
-    prometheusSelector:
-  #    prometheus: test
-    labels:
-    targetLabels:
+    prometheusSelector: {}
+    labels: {}
+    targetLabels: []
     endpoints:
-      - targetPort: 9355
-        path: /metrics
+      - port: metrics
+        path: /api/v2/metrics/prometheus
+
   ingress:
     enabled: false
     name: '{{ include "fluentbit.fullname" . }}'
