--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -646,6 +646,31 @@ prometheus-rules:
             for: "10m"
             description: "KongHQ error rate is high for '{{ $labels.exported_service }}' service"
 
+          # Logs
+          Fluentbit_no_output_bytes_processed:
+            enabled: false
+            for: 10m
+            description: "Fluent-bit pod '{{ $labels.pod }}' has not processed any output bytes for > 10 minutes"
+            expr: sum by (pod) (rate(fluentbit_output_proc_bytes_total{service!~".*-fluentbit-(gcp|yc|aws)$"}[10m])) == 0
+
+          Fluentbit_cloud_no_output_bytes_processed:
+            enabled: false
+            for: 10m
+            description: "Fluent-bit pod '{{ $labels.pod }}' has not processed any output bytes for > 70 minutes"
+            expr: sum by (pod) (rate(fluentbit_output_proc_bytes_total{service=~".*-fluentbit-(gcp|yc|aws)$"}[70m])) == 0
+
+          Fluentbit_input_error:
+            enabled: false
+            for: 5m
+            expr: sum by (pod,name) (fluentbit_input_ingestion_paused) > 0
+            description: "Input '{{ $labels.name }}' in '{{ $labels.pod }}' error"
+
+          Fluentbit_output_error:
+            enabled: false
+            for: 5m
+            expr: sum by (name) (rate(fluentbit_output_errors_total[5m])) > 0
+            description: "Output '{{ $labels.name }}' error"
+
           # Postgres
           Available_postgresql_connections_are_running_out:
             enabled: false
@@ -739,6 +764,13 @@ prometheus-rules:
             description: "Container '{{ $labels.container_name }}' in pod '{{ $labels.pod_name }}' located in namespace '{{ $labels.namespace_name }}' sends to many logs ('{{ $labels.log }}')"
             # since stackdriver has a problem with obtaining Delta metrics and the metrics are not accurate, we experimentally found that dividing the result by 5 gives the most accurate results. Therefore, we divide the result by 5
             expr: rate(stackdriver_k_8_s_container_logging_googleapis_com_log_entry_count[10m])/5 > 1000
+
+          # Logs
+          Fluentbit_high_average_latency:
+            enabled: false
+            for: 10m
+            description: "Fluent-bit pipeline experiencing high latency, pod '{{ $labels.pod }}', input '{{ $labels.input }}', output '{{ $labels.output }}'"
+            expr: rate(fluentbit_output_latency_seconds_sum[5m]) / rate(fluentbit_output_latency_seconds_count[5m]) > 2
 
           # Postgres
           Postgres_logical_backup_error:
