--- a/charts/fluent/values.yaml
+++ b/charts/fluent/values.yaml
@@ -7,6 +7,10 @@ fluentbit:
   enabled: false
   labels:
     fluentbit: "main"
+  serviceMonitor:
+    enabled: true
+    prometheusSelector:
+      prometheus: main
   clusterInputs:
     systemd:
       systemd:
@@ -435,6 +439,12 @@ fluentbit-gcp:
         claimRef:
           name: '{{ include "fluentbit.fullname" $ }}-gcsfuse'
           namespace: '{{ .Release.Namespace }}'
+    serviceMonitor:
+      enabled: true
+      prometheusSelector:
+        prometheus: main
+    service:
+      enabled: true
 
 
 operator:
