kubernetes_use_configmaps=true

--- a/charts/postgres/values.yaml
+++ b/charts/postgres/values.yaml
@@ -5,6 +5,7 @@ global:
 postgres-operator:
   enabled: false
   enableJsonLogging: true
+  kubernetes_use_configmaps: true
   resources:
     limits:
       cpu: 350m
