fix fluent alerts

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-.*.swp
-123
+*.swp
+#Mr Alex test files
+123*
 charts/**/charts
 !charts/chart_deps/app/common/charts
 !charts/chart_deps/fluent/fluentbit/fluentbit-operated/charts
