--- a/charts/loki/values.yaml
+++ b/charts/loki/values.yaml
@@ -40,10 +40,11 @@ loki:
       - '-log.format=json'
   test:
     enabled: false
-  serviceMonitor:
-    enabled: true
-    labels:
-      prometheus: main
+  monitoring:
+    serviceMonitor:
+      enabled: true
+      labels:
+        prometheus: main
   lokiCanary:
     enabled: false
   serviceAccount:
