--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -326,9 +326,7 @@ operator:
     # use old thanos image https://github.com/thanos-io/thanos/issues/8549
     thanosImage:
       tag: v0.39.2
-    ## Create Endpoints objects for kubelet targets.
-    #### we will turn this off in the next release ###
-    kubeletEndpointsEnabled: true
+    kubeletEndpointsEnabled: false
     ## Create EndpointSlice objects for kubelet targets.
     kubeletEndpointSliceEnabled: true
     logFormat: json
