add endpointslices to pomerium rbac

--- a/charts/pomerium/values.yaml
+++ b/charts/pomerium/values.yaml
@@ -170,6 +170,14 @@ controller:
       - list
       - watch
     - apiGroups:
+      - discovery.k8s.io
+      resources:
+      - endpointslices
+      verbs:
+      - get
+      - list
+      - watch
+    - apiGroups:
       - ""
       resources:
       - services/status
