--- a/charts/rabbitmq/values.yaml
+++ b/charts/rabbitmq/values.yaml
@@ -30,16 +30,16 @@ rabbitmq-cluster-operator:
     repository: rabbitmq
     tag: 4.1.3
   credentialUpdaterImage:
-    registry: docker.io
-    repository: rabbitmqoperator/default-user-credential-updater
-    tag: 1.0.8
+    registry: ghcr.io
+    repository: rabbitmq/default-user-credential-updater
+    tag: 1.0.10
   useCertManager: true
   clusterOperator:
     command:
       - /manager
     image:
-      registry: docker.io
-      repository: rabbitmqoperator/cluster-operator
+      registry: ghcr.io
+      repository: rabbitmq/cluster-operator
       tag: 2.19.0
     resources:
       limits:
@@ -52,9 +52,9 @@ rabbitmq-cluster-operator:
     command:
       - /manager
     image:
-      registry: docker.io
-      repository: rabbitmqoperator/messaging-topology-operator
-      tag: 1.17.4
+      registry: ghcr.io
+      repository: rabbitmq/messaging-topology-operator
+      tag: 1.18.2
     resources:
       limits:
         cpu: 100m
