--- a/charts/gl-runner/values.yaml
+++ b/charts/gl-runner/values.yaml
@@ -1,19 +1,10 @@
 gl-runner:
   enabled: false
-  namespace: gl-runner
-  image:
-    registry: registry.gitlab.com
-    image: gitlab-org/gitlab-runner
-    # if you want to use non standart alpine image or other versions set up image tag
-    # tag: alpine-v{{.Chart.AppVersion}}
-
   gitlabUrl: "https://gitlab.com/"
-  
+
   concurrent: 10
   logLevel: "warn"
   logFormat: "json"
-  
-  connectionMaxAge: "15m"
   
   runners: 
     executor: "kubernetes"
@@ -37,9 +28,9 @@ gl-runner:
       memory: 1024Mi
 
   nodeSelector:
-    gl-runner: "true"
+    runner: "true"
   tolerations: 
-    - key: gl-runner
+    - key: runner
       operator: Equal
       value: "true"
       effect: NoSchedule
