add URL in config TOML

--- a/charts/gl-runner/values.yaml
+++ b/charts/gl-runner/values.yaml
@@ -11,6 +11,7 @@ gl-runner:
     name: "gl-runner"
     config: |
       [[runners]]
+        url = "https://gitlab.com"
         [runners.kubernetes]
           namespace = "{{ default .Release.Namespace .Values.runners.jobNamespace }}"
           image = "alpine"
