--- a/charts/gl-runner/values.yaml
+++ b/charts/gl-runner/values.yaml
@@ -14,8 +14,8 @@ gl-runner:
           namespace = "{{ default .Release.Namespace .Values.runners.jobNamespace }}"
           image = "alpine"
           service_account = "runner"
-          cpu_request = "{{ default \"1000m\" .Values.runners.cpuRequest }}"
-          memory_request = "{{ default \"1024Mi\" .Values.runners.memoryRequest }}"
+          cpu_request = "{{ default "1000m" .Values.runners.cpuRequest }}"
+          memory_request = "{{ default "1024Mi" .Values.runners.memoryRequest }}"
 # secret must contain "runner-token" key with token value that starts with glrt-...
     secret: runner
   resources: 
