update pomerium crds

--- a/crds/pomerium/v0.32.0.custom-resource-definitions.yaml
+++ b/crds/pomerium/v0.32.0.custom-resource-definitions.yaml
@@ -503,11 +503,19 @@ spec:
                   JWTClaimHeaders convert claims from the assertion token
                   into HTTP headers and adds them into JWT assertion header.
                   Please make sure to read
-                  <a href="https://www.pomerium.com/docs/topics/getting-users-identity">
+                  <a href="https://www.pomerium.com/docs/capabilities/getting-users-identity">
                   Getting User Identity</a> guide.
                 type: object
+              mcpAllowedClientIdDomains:
+                description: |-
+                  MCPAllowedClientIDDomains specifies the allowed domains for MCP client ID metadata URLs.
+                  This is required when MCP is enabled.
+                  See <a href="https://www.pomerium.com/docs/reference/mcp">MCP Settings</a>.
+                items:
+                  type: string
+                type: array
               otel:
-                description: OTEL sets the <a href="https://www.pomerium.com/docs/reference/tracing.mdx">OpenTelemetry
+                description: OTEL sets the <a href="https://www.pomerium.com/docs/reference/tracing">OpenTelemetry
                   Tracing</a>.
                 properties:
                   bspMaxExportBatchSize:
@@ -587,13 +595,17 @@ spec:
                   href=\"https://pomerium.com/docs/reference/cookie-secret\"><code>cookie_secret</code></a>\n\t\t-
                   encrypts Pomerium session browser cookie.\n\t\tSee also other <a
                   href=\"#cookie\">Cookie</a> parameters.\n\t</li>\n\t<li><a href=\"https://pomerium.com/docs/reference/signing-key\"><code>signing_key</code></a>\n\t\tsigns
-                  Pomerium JWT assertion header. See\n\t\t<a href=\"https://www.pomerium.com/docs/topics/getting-users-identity\">Getting
+                  Pomerium JWT assertion header. See\n\t\t<a href=\"https://www.pomerium.com/docs/capabilities/getting-users-identity\">Getting
                   the user's identity</a>\n\t\tguide.\n\t</li>\n</ul>\n</p>\n<p>\nIn
                   a default Pomerium installation manifest, they would be generated
                   via a\n<a href=\"https://github.com/pomerium/ingress-controller/blob/main/config/gen_secrets/job.yaml\">one-time
                   job</a>\nand stored in a <code>pomerium/bootstrap</code> Secret.\nYou
                   may re-run the job to rotate the secrets, or update the Secret values
-                  manually.\n</p>"
+                  manually.\n</p>\n<p>\nWhen defining the Secret in a manifest, put
+                  raw values in <code>stringData</code> so\nKubernetes base64-encodes
+                  them. Use <code>data</code> only when values are already\nbase64-encoded.\n</p>\n<p>\nExample:
+                  <code>stringData.shared_secret</code> and <code>stringData.cookie_secret</code>
+                  are\nraw strings, while <code>data.signing_key</code> is base64-encoded.\n</p>"
                 format: namespace/name
                 minLength: 1
                 type: string
@@ -617,7 +629,7 @@ spec:
               storage:
                 description: |-
                   Storage defines persistent storage for sessions and other data.
-                  See <a href="https://www.pomerium.com/docs/topics/data-storage">Storage</a> for details.
+                  See <a href="https://www.pomerium.com/docs/internals/data-storage">Storage</a> for details.
                   If no storage is specified, Pomerium would use a transient in-memory storage (not recommended for production).
                 properties:
                   file:
