--- a/charts/loki/values.yaml
+++ b/charts/loki/values.yaml
@@ -65,6 +65,7 @@ loki:
       ingestion_rate_mb: 90
       ingestion_burst_size_mb: 40
       max_global_streams_per_user: 9000
+      max_query_series: 10000
       max_label_names_per_series: 20
       per_stream_rate_limit: 15MB
       per_stream_rate_limit_burst: 30MB
