Feature use endpointslices (#110)
* disable kubelet enpoints

* add endpointslices to pomerium rbac

* update rmq

* update rmq crds

* update prometheus crds

* enable prometheus-operator

* change rmq-operator charts url

* helm dep update

* add rmq-deps

* fix rmq

* update rmq-operator

* update rmq-msg-tp-operator

* update rmq

* update prometheus

* update info

* ipdate pomerium image

* update pomerium crds

* update info

* add readme and copyright

* helm dep update

* change pomerium res.limits

* update info

* change Readme

* del tgz

* Revert "del tgz"

This reverts commit c0fbc307a796855d334e98632df2437df57035fe.

* update gha crds

* update gha

* helm dep update

* update info

* change pg fluentbit input setting

* update rmq

* change pg logs rotation

---------

Co-authored-by: St.Dmitry <hector@defigang.dev>

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -322,13 +322,11 @@ operator:
     enabled: false
 
   prometheusOperator:
-    enabled: false
+    enabled: true
     # use old thanos image https://github.com/thanos-io/thanos/issues/8549
     thanosImage:
       tag: v0.39.2
-    ## Create Endpoints objects for kubelet targets.
-    #### we will turn this off in the next release ###
-    kubeletEndpointsEnabled: true
+    kubeletEndpointsEnabled: false
     ## Create EndpointSlice objects for kubelet targets.
     kubeletEndpointSliceEnabled: true
     logFormat: json
