--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -673,12 +673,10 @@ prometheus-rules:
             enabled: false
             for: 10m
             expr: |
-              100 * (
-                sum(rate(loki_request_duration_seconds_count{status_code=~"5.."}[5m])) by (namespace, job, route)
-                  /
-                sum(rate(loki_request_duration_seconds_count[5m])) by (namespace, job, route)
-              ) > 10
-            description: "{{ $labels.job }} {{ $labels.route }} is experiencing {{ printf \"%.2f\" $value }}% errors."
+              sum(rate(loki_request_duration_seconds_count{status_code=~"5.."}[5m])) by (namespace, job, route)
+                /
+              sum(rate(loki_request_duration_seconds_count[5m])) by (namespace, job, route) > 0.1
+            description: "{{ $labels.job }} {{ $labels.route }} is experiencing {{ humanizePercentage $value }} errors."
 
           # Postgres
           Available_postgresql_connections_are_running_out:
